security: harden authentication and API access